# goxel

./: .gitignore
android/: CMakeLists.txt  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/androidTest/java/com/aeongames/goxel/: GoxelTest.java
android/src/main/: AndroidManifest.xml
android/src/main/java/com/aeongames/goxel/: Goxel.java  GoxelSurfaceView.java
android/src/main/jni/: com_aeongames_goxel_GoxelSurfaceView.cpp
android/src/main/res/layout/: main.xml
android/src/main/res/values/: strings.xml
src/: dialogs.c  goxel.h  system.c  texture.c  utils.c
